@@ -1,3 +1,7 @@
+* 2013-10-11 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29232: Handle a meanwhile expunged message appropriately
+
 * 2013-10-10 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 29214: Fire filestorage events upon copy-operation within the same account
